package eapli.base.funcao.repositories;

import eapli.base.funcao.domain.Funcao;
import eapli.base.funcao.domain.IdentificadorFuncao;
import eapli.framework.domain.repositories.DomainRepository;

/**
 * The interface Funcao repository.
 */
public interface FuncaoRepository
        extends DomainRepository<IdentificadorFuncao, Funcao> {

}
